feat: Premium black UI/UX improvements for mobile and desktop
- Set pure-noir theme as default for premium black experience
- Enhanced mobile responsiveness with touch-optimized interactions
- Added mobile gestures (swipe, tap, long-press) for intuitive navigation
- Improved sidebar with slide-in/out animations and mobile overlay
- Optimized chat input with sticky positioning and mobile keyboard handling
- Enhanced chat messages with responsive layouts and touch-friendly actions
- Added performance optimizations for mobile devices
- Implemented proper viewport settings and mobile web app meta tags
- Added touch manipulation and hardware acceleration for smooth animations
- Improved accessibility with proper touch targets and reduced motion support

--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>AJ STUDIOZ - Advanced AI Assistant</title>
     <meta name="description" content="AJ STUDIOZ - Your intelligent AI companion for conversations, code assistance, and real-time problem solving" />
     <meta name="author" content="AJ STUDIOZ" />
+    
+    <!-- Mobile Optimizations -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="AJ STUDIOZ" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="msapplication-navbutton-color" content="#000000" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
     <meta property="og:title" content="AJ STUDIOZ - Advanced AI Assistant" />
     <meta property="og:description" content="Your intelligent AI companion for conversations, code assistance, and real-time problem solving" />
